# torchtalk

./: .gitignore  .mcp.json  CLAUDE.md  README.md  app.py  pyproject.toml  requirements.txt  setup.py
.claude/commands/: trace.md
scripts/: start_vllm_server.py
src/torchtalk/: __init__.py  __main__.py  cli.py  config.py  formatting.py  indexer.py  server.py  snapshots.py
tests/: __init__.py  conftest.py  test_affected.py  test_app.py  test_backward_bridge.py  test_binding_bridge.py  test_binding_detector.py  test_binding_detector_pytorch.py  test_cli.py  test_conversation_engine.py  test_cpp_call_graph.py  test_decomp_aliases.py  test_dispatch_stub_map.py  test_formatting.py  test_graph_expanded_retriever.py  test_graph_indexing.py  test_helpers.py  test_indexer.py  test_integration.py  test_metadata_filters.py  test_postprocessed_retrieval.py  test_relationship_builder.py  test_router.py  test_snapshots.py  test_vllm_server.py  test_word_match.py
torchtalk/: __init__.py  cli.py  mcp_server.py
torchtalk/analysis/: __init__.py  binding_detector.py  chunker.py  cpp_cuda_parser.py  native_parser.py  repo_analyzer.py
torchtalk/cli/: __init__.py  main.py
torchtalk/context/: __init__.py  assembler.py  assembler_core.py  graph_retriever.py  semantic_search.py
torchtalk/core/: __init__.py  adaptive_response.py  config.py  context_manager.py
torchtalk/engine/: __init__.py  conversation_engine.py  graph_expanded_retriever.py  postprocessed_retriever.py
torchtalk/indexing/: __init__.py  embedder.py  graph_enhanced_indexer.py  llamaindex_builder.py  vector_store.py
(+29 files in other folders)
